// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insight factory should create new empty insight 1`] = `
Object {
  "insight": Object {
    "buckets": Array [],
    "filters": Array [],
    "properties": Object {},
    "sorts": Array [],
    "title": "Untitled",
    "visualizationClassUri": "local:bar",
  },
}
`;

exports[`insight factory should create new empty insight with buckets, filters and sorts 1`] = `
Object {
  "insight": Object {
    "buckets": Array [
      Object {
        "items": Array [
          Object {
            "measure": Object {
              "definition": Object {
                "measureDefinition": Object {
                  "item": Object {
                    "identifier": "afSEwRwdbMeQ",
                  },
                },
              },
              "localIdentifier": "m_afSEwRwdbMeQ",
            },
          },
        ],
        "localIdentifier": "test",
      },
    ],
    "filters": Array [
      Object {
        "positiveAttributeFilter": Object {
          "displayForm": Object {
            "identifier": "label.owner.department",
          },
          "in": Object {
            "values": Array [
              "Inside Sales",
            ],
          },
        },
      },
    ],
    "properties": Object {},
    "sorts": Array [
      Object {
        "attributeSortItem": Object {
          "attributeIdentifier": "a_label.owner.department",
          "direction": "asc",
        },
      },
    ],
    "title": "Untitled",
    "visualizationClassUri": "local:bar",
  },
}
`;

exports[`insight factory should create new empty insight with custom properties 1`] = `
Object {
  "insight": Object {
    "buckets": Array [],
    "filters": Array [],
    "properties": Object {
      "controls": Object {
        "grid": true,
      },
    },
    "sorts": Array [],
    "title": "Untitled",
    "visualizationClassUri": "local:bar",
  },
}
`;

exports[`insight factory should create new empty insight with custom title 1`] = `
Object {
  "insight": Object {
    "buckets": Array [],
    "filters": Array [],
    "properties": Object {},
    "sorts": Array [],
    "title": "My Insight",
    "visualizationClassUri": "local:bar",
  },
}
`;
